twitter link fix

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
       margin-top: auto;
       padding: 1em;
       text-align: center;
-      background: rgba(0, 0, 0, 0.7);
+      background: transparent;
       width: 100%;
       max-width: 700px;
-      border: 1px solid #ff4dd2;
+      border: none;
     }
 
     .twitter-link {
@@ -167,7 +167,7 @@
 
   <footer>
     <a class="twitter-link" href="https://x.com/slava3ngl" target="_blank">
-      Follow us on Twitter/X
+      X
     </a>
   </footer>
 
